<resources>
    <string name="app_name">AppMagiWorld</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_game">Play Game</string>
    <string name="choix_des_joueurs">Choix des Joueurs</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="restart_game">Restart Game</string>
    <string name="attaque_base">Attaque Base</string>
    <string name="attaque_speciale">Attaque Speciale</string>
    <string name="bienvenue_sur_le_jeu_magiworld_pour_commencer_a_jouer_appuyer_sur_le_bouton_suivant_pour_cr_e_vos_personnage">Bienvenue sur le Jeu MagiWorld ,pour commencer a jouer appuyer sur le bouton suivant pour crée vos personnage</string>
    <string name="suivant">Suivant</string>
    <string name="selectionn_les_caracteristiques_du_joueur_1">Selectionné les caracteristiques du Joueur 1</string>
    <string name="suivant">Suivant</string>
    <string name="guerrier">Guerrier</string>
    <string name="rodeur">Rodeur</string>
    <string name="mage">Mage</string>
    <string name="niveau">Niveau :</string>
    <string name="force">Force :</string>
    <string name="intelligence">Intelligence :</string>
    <string name="agilit">Agilité :</string>
    <string name="selectionn_les_caracteristiques_du_joueur_2">Selectionné les caracteristiques du Joueur 2</string>
    <string name="guerrier">Guerrier</string>
    <string name="rodeur">Rodeur</string>
    <string name="mage">Mage</string>
    <string name="niveau">Niveau :</string>
    <string name="force">Force :</string>
    <string name="intelligence">Intelligence :</string>
    <string name="agilit">Agilité :</string>
    <string name="result">result</string>
</resources>